--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,6 +17,7 @@
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "clsx": "^2.1.0",
+    "critters": "^0.0.22",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -34,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.0.4",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
